log
Sat 10 Sep 2022 01:12:45 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
bae760a
Sat 10 Sep 2022 01:18:51 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d1a79b4
Sat 10 Sep 2022 02:05:59 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c:43:8: error: ‘insertMap’ defined but not used [-Werror=unused-function]
   43 |   void insertMap(HashMap * map, char * key, void * value) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e8e0c0
Sat 10 Sep 2022 02:06:18 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 30/70
3068785
Sat 10 Sep 2022 02:15:11 AM UTC: 
 hashmap.c | 46 ++++------------------------------------------
 1 file changed, 4 insertions(+), 42 deletions(-)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2f2d92d
